--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "torrent-search-api": "^2.1.4"
   },
