--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "torrent-search-api": "^2.1.4",
-    "webtorrent": "^2.8.4"
+    "webtorrent": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
